# lpg_massage_salon

./: .env.example  .gitignore  README.md  data.json  dump1.json  locations_data.json  manage.py  pyproject.toml  requirements.txt  services_data.json  updated_services.json  updated_services_data.json
api/: serializers.py  urls.py  views.py
appointments/: admin.py  forms.py  models.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_appointment_admin_notes_appointment_notified_and_more.py
calendar_integration/: ical_service.py  models.py  services.py  urls.py  views.py
calendar_integration/migrations/: 0001_initial.py
core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
fixtures/: categories.json  locations.json  services.json
locations/: admin.py  models.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_location_latitude_location_longitude.py
lpg_salon/: asgi.py  settings.py  urls.py  wsgi.py
results/: admin.py  models.py  urls.py  views.py
results/migrations/: 0001_initial.py
services/: admin.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_servicecategory_icon.py  0003_alter_service_category_servicereview.py
static/css/: style.css
static/js/: animations.js  appointment-form.js  main.js  theme-toggle.js
static/scss/: _animations.scss  _variables.scss  main.scss  responsive.scss
templates/: base.html
templates/account/: base.html  login.html  logout.html  password_reset.html  signup.html
templates/appointments/: admin_appointment_detail.html  admin_appointment_list.html  admin_appointment_update.html  admin_review_detail.html  admin_review_list.html  (+5 more)
(+19 files in other folders)
