[tool.poetry]
name = "lpg-massage-salon"
version = "0.1.0"
description = "Website for LPG massage salon chain"
authors = ["Vadim <kozlov67b@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.0"
django-crispy-forms = "^2.0"
pillow = "^11.0.0"
django-allauth = "^0.58.0"
django-environ = "^0.11.2"
crispy-bootstrap5 = "^2025.6"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"