[tool.poetry]
name = "lpg-massage-salon"
version = "0.1.0"
description = "Website for LPG massage salon chain"
authors = ["Vadim <kozlov67b@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.0"
django-crispy-forms = "^2.0"
pillow = "^11.0.0"
django-allauth = "^0.58.0"
django-environ = "^0.11.2"
crispy-bootstrap5 = "^2025.6"
django-compressor = "^4.5.1"
django-libsass = "^0.9"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
drf-yasg = "^1.21.10"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.178.0"
icalendar = "^6.3.1"
django-filter = "^25.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"